# coffee-rag-chatbot

./: .gitignore  README.md  pyproject.toml
rag-pipeline/notebook/: coffeebot_RAG_Pipeline.ipynb
scraper/: scrapy.cfg
scraper/coffee_scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/coffee_scraper/spiders/: dak_coffee.py  manual-spider.py
